# android-ransomware-model-classifier

./: Cargo.toml  README.md
model/: main.py  model.py  parse.py  static-detectors.csv  static.csv  syscalls-freq-goodware.csv  syscalls-freq-ransomware.csv
model/dynamic/: dynamic_classify.py
model/static/: static_classify.py
src/: avd_interaction.py  lib.rs
