[package]
name = "automated_execution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3-log = "0.5.0"
log = "0.4.14"